2003-02-13  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed bug in reading a custom page size from
	  the PostScript input file.

2003-02-03  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.0beta1. 
	  Tag name: "foomatic-filters-3_0_0beta1".

	* README, USAGE: Updated for version 3.0.0beta1.

	* COPYING: Added file containing the GPL.

2002-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.1. 
	  Tag name: "foomatic-filters-2_9_1".

	* README, USAGE: Updated for version 2.9.1.

2002-12-09  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Introduced support for composite options.

2002-12-08  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-gswrapper.in: If there is no /dev/fd/3, don't use
	  /dev/fd/3 for standard output. Use the good old "| cat >&3".

2002-12-04  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.0. 
	  Tag name: "foomatic-filters-2_9_0".
	
2002-12-01  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-gswrapper.in: If there is no /dev/fd/0, don't use
	  /dev/fd/* for standard input, standard output, and standard
	  error. Support of block reading from standard input ("-_"
	  instead of "-" on GhostScript command line), use block
	  reading preferrably.

	* foomatic-rip.in: Made sure that an absolute path for the PPD
	  file is inserted in the PDQ driver description file, suppress
	  log output on standard error whenn generating a PDQ driver
	  description file.

2002-11-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.0pre1. 
	  Tag name: "foomatic-filters-2_9_0pre1".
	
2002-11-28  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed comment text.

	* filter.conf: Updated comment text.

	* USAGE: Fixed typo.
	
2002-11-27  Till Kamppeter <till.kamppeter@gmx.net>
