@@ -1,3 +1,8 @@
+2003-02-22  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* foomatic-rip.in: Introduced mode for the spooler CPS (Coherent
+	  Printing System).
+
 2003-02-13  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* foomatic-rip.in: Fixed bug in reading a custom page size from
